MB.DVX.AppOfApps.PlataformaM_Mais/sistemas/plataforma-m-mais/manifestos/istio/templates/istio-base.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: istio-system
spec: {}
status: {}

---
# Source: base/templates/zzz_profile.yaml
#  Flatten globals, if defined on a per-chart basis
---
# Source: base/templates/default.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: istiod-default-validator
  labels:
    app: istiod
    release: istio-base
    istio: istiod
    istio.io/rev: "default"
webhooks:
  - name: validation.istio.io
    clientConfig:
      service:
        name: istiod
        namespace: istio-system
        path: "/validate"
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - security.istio.io
          - networking.istio.io
          - telemetry.istio.io
          - extensions.istio.io
        apiVersions:
          - "*"
        resources:
          - "*"
    # Fail open until the validation webhook is ready. The webhook controller
    # will update this to `Fail` and patch in the `caBundle` when the webhook
    # endpoint is ready.
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: ["v1"]
